--- a/app/src/main/res/layout/create_or_update_task_bottom_sheet.xml
+++ b/app/src/main/res/layout/create_or_update_task_bottom_sheet.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Create Task"
+        android:text="@string/create_task_title"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -36,13 +36,32 @@
             android:minHeight="48dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/btn_task_create"
+    <LinearLayout
+        android:gravity="center"
+        android:padding="16dp"
+        android:weightSum="2"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="Create" />
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_weight="1"
+            android:text="@string/delete"
+            android:layout_marginEnd="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_task_delete"/>
+
+        <Button
+            android:layout_weight="1"
+            android:layout_marginStart="8dp"
+            android:id="@+id/btn_task_create_or_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/create" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
