--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,44 @@
         app:layout_constraintTop_toBottomOf="@+id/rv_categories"
         tools:listitem="@layout/item_task" />
 
+    <LinearLayout
+        android:id="@+id/ll_empty_view"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:text="@string/empty_category_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:textSize="18sp"
+            android:gravity="center"
+            android:text="@string/empty_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:src="@drawable/ic_empty_task"
+            android:layout_width="300dp"
+            android:layout_height="250dp"/>
+
+        <Button
+            android:id="@+id/btn_create_empty"
+            android:layout_margin="16dp"
+            android:text="@string/create"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+    </LinearLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_create_task"
         android:layout_width="wrap_content"
